--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <h1>Hello World</h1>
     <a href="contact.html">Contact Us</a>
     <a href="about.html">About Us</a>
+
+    <h2>Another change</h2>
 </body>
 </html>
